--- a/Work#7/style.css
+++ b/Work#7/style.css
@@ -268,37 +268,37 @@ body {
 
 .Item_box_image_1 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_2 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 } 
 
 .Item_box_image_3 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_4 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_5 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_6 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
@@ -407,6 +407,30 @@ body {
     max-width: 736px;
     padding-bottom: 70px;
     gap: 16px; 
+  }
+
+  .Item_box_image_1 {
+    height: 581px;
+  }
+  
+  .Item_box_image_2 {
+    height: 581px;
+  } 
+  
+  .Item_box_image_3 {
+    height: 581px;
+  }
+  
+  .Item_box_image_4 {
+    height: 581px;
+  }
+  
+  .Item_box_image_5 {
+    height: 581px;
+  }
+  
+  .Item_box_image_6 {
+    height: 581px;
   }
 
   .brouse_button {
