--- a/Work#6/style.css
+++ b/Work#6/style.css
@@ -268,37 +268,37 @@ body {
 
 .Item_box_image_1 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_2 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 } 
 
 .Item_box_image_3 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_4 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_5 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
 .Item_box_image_6 {
   width: 360px;
-  height: 587x;
+  height: 587px;
   background: rgb(248, 248, 248);
 }
 
