--- a/Work#9/style.css
+++ b/Work#9/style.css
@@ -415,7 +415,7 @@ body {
 }
 
 .img_facebook {
-  background-image: url("./img/facebook.svg");
+  /* background-image: url("./img/facebook.svg"); */
 }
 
 .img_facebook_mask {
@@ -423,7 +423,7 @@ body {
 }
 
 .img_instagramm {
-  background-image: url("./img/instagram.svg");
+  /* background-image: url("./img/instagram.svg"); */
 }
 
 .img_instagramm_mask {
@@ -431,7 +431,7 @@ body {
 }
 
 .img_pinteres {
-  background-image: url("./img/pinterest.svg");
+  /* background-image: url("./img/pinterest.svg"); */
 }
 
 .img_pinteres_mask {
@@ -439,7 +439,7 @@ body {
 }
 
 .img_twwiter {
-  background-image: url("./img/twitter1.svg");
+  /* background-image: url("./img/twitter1.svg"); */
 }
 
 .img_twwiter_mask {
