--- a/Work#9/style.css
+++ b/Work#9/style.css
@@ -336,7 +336,7 @@ body {
   grid-column: 2 / -2;
   margin-top: 48px;
 }
-/* -------------------------------------- */
+
 .features {
   height: 341px;
   background-color: #222224;
@@ -344,6 +344,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 
 .delivery {
@@ -356,7 +357,7 @@ body {
 }
 
 .free_delivery_image {
-
+  margin-bottom: 28px;
 }
 
 .sales {
@@ -369,7 +370,7 @@ body {
 }
 
 .sales_discount_image {
-
+  margin-bottom: 19px;
 }
 
 .quality {
@@ -382,7 +383,7 @@ body {
 }
 
 .quality_assurance_image {
-
+  margin-bottom: 25px;
 }
 
 .all_features_text_h1 {
@@ -396,6 +397,7 @@ body {
   font-size: 13px;
   text-align: center;
   color: #fbfbfb;
+  margin: 16px 40px 0px 40px;
 }
 
 .box_down_baner {
@@ -460,6 +462,7 @@ body {
 }
 
 .box_text_rigth_element_h2 {
+  width: 356px;
   font-weight: 400;
   font-size: 18px;
 }
@@ -469,21 +472,34 @@ body {
   justify-content: center;
   width: 356px;
   height: 49px;
+  margin-top: 32px;
 }
 
-.box_button_1 {
+.input_button_1 {
+  width: 256px;
+  /* height: 49px; */
   background-color: #e1e1e1;
-}
-
-.box_button_2 {
-  background-color: #f16d7f;
-}
-
-.Enter_email_button_text {
+  border-radius: 15px 0px 0px 15px;
+  border: none;
   font-weight: 400;
   font-size: 14px;
   color: #222224;
+  padding-left: 22px;
 }
+
+.box_button_1 {
+  width: 100px;
+  height: 49px;
+  background-color: #f16d7f;
+  border-radius: 0px 15px 15px 0px;
+  border: none;
+}
+
+/* .Enter_email_button_text {
+  font-weight: 400;
+  font-size: 14px;
+  color: #222224;
+} */
 
 .Subscribe_button_text {
   font-weight: 400;
@@ -491,9 +507,6 @@ body {
   text-align: center;
   color: #fff;
 }
-
-
-
 
 .copyright {
   height: 79px;
@@ -510,14 +523,17 @@ body {
 }
 
 .copy_text_left_site_h2 {
+  width: 332px;
   font-weight: 400;
   font-size: 16px;
   color: #fbfbfb;
 }
 
 .copy_rigth_site {
+  width: 147px;
   display: flex;
-  flex-direction: row
+  flex-direction: row;
+  gap: 8px;
 }
 
 .img_facebook {
@@ -527,7 +543,6 @@ body {
   width: 32px;
   height: 32px;
   background-color: #fff;
-
   /* background-image: url("./img/facebook.svg"); */
 }
 
@@ -726,7 +741,7 @@ body {
     height: 363px;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
   }
 
   .banner_image {
