--- a/Work#9/style.css
+++ b/Work#9/style.css
@@ -189,7 +189,12 @@ body {
 
 .menu_list_man {
   width: 100px;
-  height: 130px
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 12px;
+  gap: 11px;
+  padding-left: 21px;
 }
 
 .menu_category_women {
@@ -203,6 +208,11 @@ body {
 .menu_list_women {
   width: 126px;
   height: 163px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 12px;
+  gap: 11px;
+  padding-left: 21px;
 }
 
 .menu_category_kinds {
@@ -212,6 +222,11 @@ body {
 .menu_list_kids {
   width: 126px;
   height: 196px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 12px;
+  gap: 11px;
+  padding-left: 21px;
 }
 
 
