--- a/Work#10/style.css
+++ b/Work#10/style.css
@@ -53,12 +53,14 @@ body {
 }
 
 .menu_logo {
+  cursor: pointer;
 }
 
 .button_menu_icon_search {
   fill: #e8e8e8;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .menu_rigth_site {
@@ -75,6 +77,7 @@ body {
   border: none;
   margin-top: 30px;
   margin-bottom: 22px;
+  cursor: pointer;
 }
 
 .button_menu_icon_profile {
@@ -83,6 +86,7 @@ body {
   border: none;
   margin-top: 26px;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .button_menu_icon_backed {
@@ -94,6 +98,7 @@ body {
   margin-top: 26px;
   margin-bottom: 20px;
   position: relative;
+  cursor: pointer;
 }
 
 .eclipse_5 {
@@ -158,9 +163,9 @@ body {
   color: #f16d7f;
 }
 
-.hidden {
+/* .hidden {
   display: none;
-}
+} */
 
 .menu {
   max-width: 232px;
@@ -172,7 +177,16 @@ body {
   padding: 32px;
   box-shadow: 6px 4px 35px 0 rgba(0, 0, 0, 0.21);
 
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 0.5s, transform 0.5s; 
 }
+
+.menu.active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
 
 .title_h1 {
   font-weight: 700;
@@ -233,7 +247,6 @@ body {
   padding-left: 21px;
 }
 
-
 .menu_title {
   font-weight: 400;
   font-size: 14px;
@@ -244,6 +257,11 @@ body {
   font-weight: 400;
   font-size: 14px;
   color: #6f6e6e;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.menu_link:hover {
+  color: #F16D7F;
 }
 
 .offer_box {
@@ -379,12 +397,12 @@ body {
   height: 587px;
   background: rgb(248, 248, 248);
   position: relative;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 }
 
 .image_item_1 {
   width: 360px;
   height: 420px;
-  transition: filter 0.3s;
 }
 
 .mask_select_product_box {
@@ -397,7 +415,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  display: none;
+  /* display: none; */
+  opacity: 0; 
+  visibility: hidden; 
+  transition: opacity 0.3s, visibility 0.3s;
 }
 
 .button_add_cat_probuct_box {
@@ -413,10 +434,13 @@ body {
   padding: 11px 17px 9px 14px;
   position: absolute;
   cursor: pointer;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s; 
 }
 
 .Item_box_image_1:hover .mask_select_product_box {
-  display: flex;  
+  /* display: flex;   */
+  opacity: 1;
+  visibility: visible;
 }
 
 .button_add_cat_probuct_box:hover svg path {
@@ -432,10 +456,13 @@ body {
   height: 587px;
   background: rgb(248, 248, 248);
   position: relative;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 } 
 
 .Item_box_image_2:hover .mask_select_product_box {
-  display: flex;  
+  /* display: flex;   */
+  opacity: 1;
+  visibility: visible;
 }
 
 .Item_box_image_3 {
@@ -443,10 +470,13 @@ body {
   height: 587px;
   background: rgb(248, 248, 248);
   position: relative;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 }
 
 .Item_box_image_3:hover .mask_select_product_box {
-  display: flex;  
+  /* display: flex;   */
+  opacity: 1;
+  visibility: visible;
 }
 
 .Item_box_image_4 {
@@ -454,10 +484,13 @@ body {
   height: 587px;
   background: rgb(248, 248, 248);
   position: relative;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 }
 
 .Item_box_image_4:hover .mask_select_product_box {
-  display: flex;  
+  /* display: flex;   */
+  opacity: 1;
+  visibility: visible;
 }
 
 .Item_box_image_5 {
@@ -465,10 +498,13 @@ body {
   height: 587px;
   background: rgb(248, 248, 248);
   position: relative;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 }
 
 .Item_box_image_5:hover .mask_select_product_box {
-  display: flex;  
+  /* display: flex;   */
+  opacity: 1;
+  visibility: visible;
 }
 
 .Item_box_image_6 {
@@ -476,10 +512,13 @@ body {
   height: 587px;
   background: rgb(248, 248, 248);
   position: relative;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 }
 
 .Item_box_image_6:hover .mask_select_product_box {
-  display: flex;  
+  /* display: flex;   */
+  opacity: 1;
+  visibility: visible;
 }
 
 .brouse_button {
@@ -492,6 +531,7 @@ body {
   color: #f16d7f;
   grid-column: 2 / -2;
   margin-top: 48px;
+  cursor: pointer;
 }
 
 .features {
@@ -654,6 +694,7 @@ body {
   background-color: #f16d7f;
   border-radius: 0px 15px 15px 0px;
   border: none;
+  cursor: pointer;
 }
 
 /* .Enter_email_button_text {
@@ -707,14 +748,25 @@ body {
   height: 32px;
   background-color: #fff;
   cursor: pointer;
+  transition: background-color 0.5s, fill 0.5s; 
   /* background-image: url("./img/facebook.svg"); */
 }
 
-.img_facebook:hover,
+.img_facebook:hover {
+  background-color: #F16D7F;
+  transition: background-color 0.5s;
+}
+
+.img_facebook:hover svg path {
+  fill: #fff; 
+  transition: fill 0.5s;
+}
+
+/* .img_facebook:hover,
 .img_facebook:hover svg path {
   background-color: #F16D7F;
   fill: #fff; 
-}
+} */
 
 /* .img_facebook:hover {
   background-color: #F16D7F; 
@@ -736,14 +788,25 @@ body {
   height: 32px;
   background-color: #fff;
   cursor: pointer;
+  transition: background-color 0.5s, fill 0.5s;
   /* background-image: url("./img/instagram.svg"); */
 }
 
-.img_instagramm:hover,
+.img_instagramm:hover {
+  background-color: #F16D7F;
+  transition: background-color 0.5s;
+}
+
+.img_instagramm:hover svg path {
+  fill: #fff; 
+  transition: fill 0.5s;
+}
+
+/* .img_instagramm:hover,
 .img_instagramm:hover svg path {
   background-color: #F16D7F;
   fill: #fff; 
-}
+} */
 
 /* .img_instagramm:hover {
   background-color: #F16D7F; 
@@ -761,14 +824,25 @@ body {
   height: 32px;
   background-color: #fff;
   cursor: pointer;
+  transition: background-color 0.5s, fill 0.5s;
   /* background-image: url("./img/pinterest.svg"); */
 }
 
-.img_pinteres:hover,
+.img_pinteres:hover {
+  background-color: #F16D7F;
+  transition: background-color 0.5s;
+}
+
+.img_pinteres:hover svg path {
+  fill: #fff; 
+  transition: fill 0.5s;
+}
+
+/* .img_pinteres:hover,
 .img_pinteres:hover svg path {
   background-color: #F16D7F;
   fill: #fff; 
-}
+} */
 
 /* .img_pinteres:hover {
   background-color: #F16D7F; 
@@ -786,14 +860,25 @@ body {
   height: 32px;
   background-color: #fff;
   cursor: pointer;
+  transition: background-color 0.5s, fill 0.5s;
   /* background-image: url("./img/twitter1.svg"); */
 }
 
-.img_twwiter:hover,
+.img_twwiter:hover {
+  background-color: #F16D7F;
+  transition: background-color 0.5s;
+}
+
+.img_twwiter:hover svg path {
+  fill: #fff; 
+  transition: fill 0.5s;
+}
+
+/* .img_twwiter:hover,
 .img_twwiter:hover svg path {
   background-color: #F16D7F;
   fill: #fff; 
-}
+} */
 
 /* .img_twwiter:hover {
   background-color: #F16D7F; 
