--- a/Work#7/style.css
+++ b/Work#7/style.css
@@ -6,49 +6,38 @@ body {
 
 .conteiner {
   font-family: var(--font-family);
-  max-width: 100%;
   width: 1140px;
   margin: 0 auto;
-  padding: 0;
 }
 
 .header {
+  position: relative; /* Для позиционирования псевдоэлемента */
+  background-color: transparent; /* Убираем цвет фона у основного блока */
+}
+
+.header::after {
+  content: ''; /* Необходимо для создания псевдоэлемента */
+  position: absolute;
+  top: 0; /* Расположение полосы сверху блока */
+  left: 50%; /* Центрирование полосы */
+  width: 1600px; /* Ширина полосы */
+  height: 75px; /* Высота полосы, как у фонового изображения */
+  background-color: #222; /* Цвет фона полосы */
+  transform: translateX(-50%); /* Смещение полосы на половину её ширины влево */
+  z-index: -1; /* Полоса будет под содержимым блока .header */
 }
 
 .head_menu {
-  /* width: 1600px; */
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background-image: url("./img/menu_fon.svg");
-  fill: #222;
-  background-size: cover;
-  /* Начало тестового кода */
-  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.head_menu::before,
-.head_menu::after {
-  content: '';
-  position: absolute;
-  width: 230.5px; 
-  height: 100%;
-  background-color: #222; 
-}
-
-.head_menu::before {
-  left: -230px; 
-}
-
-.head_menu::after {
-  right: -230px; 
-}
-/* Конец тестового кода */
 
 .menu_left_site {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   column-gap: 41px;
+  /* justify-content: flex-start; */
   /* margin-left: 231px; */
 }
 
@@ -64,8 +53,8 @@ body {
 .menu_rigth_site {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   column-gap: 33px;
+  /* justify-content: flex-end; */
   /* margin-right: 240px; */
 }
 
@@ -94,11 +83,10 @@ body {
 }
 
 .baner_backround {
+  width: 1600px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  max-width: 1600px;
-  margin: 0 auto;
   background: rgb(241, 228, 230);
   font-family: var(--font-family);
 }
@@ -317,12 +305,12 @@ body {
 @media(min-width: 768px) and (max-width: 1140px) {
 
   .conteiner {
-    max-width: 768px;
+    width: 100%;
   }
 
-  .head_menu::before,
-  .head_menu::after {
-  width: 0px; 
+  .header::after {
+    width: 100%; 
+    max-width: 1140px; 
   }
 
   .menu_left_site {
@@ -333,6 +321,10 @@ body {
     margin-right: 41px;
   }
   
+  .baner_backround {
+    max-width: 1140px;
+  }
+
   .baner_rigth_line_text {
     width: 311px;
     height: 92px;
