--- a/Work#8/style.css
+++ b/Work#8/style.css
@@ -6,49 +6,39 @@ body {
 
 .conteiner {
   font-family: var(--font-family);
-  max-width: 100%;
   width: 1140px;
   margin: 0 auto;
-  padding: 0;
 }
 
 .header {
+  position: relative;
+  background-color: transparent;
+}
+
+.header::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 100vw;
+  max-width: 1600px;
+  height: 75px;
+  background-color: #222;
+  transform: translateX(-50%);
+  z-index: -1;
 }
 
 .head_menu {
-  /* width: 1600px; */
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background-image: url("./img/menu_fon.svg");
-  fill: #222;
-  background-size: cover;
-  /* Начало тестового кода */
-  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.head_menu::before,
-.head_menu::after {
-  content: '';
-  position: absolute;
-  width: 230.5px; 
-  height: 100%;
-  background-color: #222; 
-}
-
-.head_menu::before {
-  left: -230px; 
-}
-
-.head_menu::after {
-  right: -230px; 
-}
-/* Конец тестового кода */
 
 .menu_left_site {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   column-gap: 41px;
+  /* justify-content: flex-start; */
   /* margin-left: 231px; */
 }
 
@@ -64,8 +54,8 @@ body {
 .menu_rigth_site {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   column-gap: 33px;
+  /* justify-content: flex-end; */
   /* margin-right: 240px; */
 }
 
@@ -94,11 +84,11 @@ body {
 }
 
 .baner_backround {
+  width: 100%;
+  max-width: 1600px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  max-width: 1600px;
-  margin: 0 auto;
   background: rgb(241, 228, 230);
   font-family: var(--font-family);
 }
@@ -317,12 +307,11 @@ body {
 @media(min-width: 768px) and (max-width: 1140px) {
 
   .conteiner {
-    max-width: 768px;
+    width: 100%;
   }
 
-  .head_menu::before,
-  .head_menu::after {
-  width: 0px; 
+  .header::after {
+    max-width: 1140px; 
   }
 
   .menu_left_site {
@@ -331,6 +320,10 @@ body {
 
   .menu_rigth_site {
     margin-right: 41px;
+  }
+  
+  .baner_backround {
+    max-width: 1140px; 
   }
   
   .baner_rigth_line_text {
@@ -442,12 +435,11 @@ body {
 @media(max-width: 767px) {
 
   .conteiner {
-    max-width: 375px;
+    width: 100%;
   }
 
-  .head_menu::before,
-  .head_menu::after {
-  width: 0px; 
+  .header::after {
+    max-width: 767px; 
   }
 
   .menu_left_site {
