--- a/Work#8/style.css
+++ b/Work#8/style.css
@@ -451,7 +451,7 @@ body {
   }
 
   .baner_backround {
-    width: 375px;
+    width: 100%;
     height: 363px;
     display: flex;
     justify-content: center;
@@ -496,6 +496,7 @@ body {
   }
 
   .offer_box {
+    width: 100%;
     max-height: none;
     grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
     justify-items: center;
@@ -505,25 +506,25 @@ body {
   }
 
   .frst_card_image_1 {
-    width: 343px;
+    width: 320px;
     height: 247px;
     background-size: cover;
   }
 
   .second_card_image_2 {
-    width: 343px;
+    width: 320px;
     height: 247px;
     background-size: cover;
   }
 
   .Third_card_image_3 {
-    width: 343px;
+    width: 320px;
     height: 247px;
     background-size: cover;
   }
 
   .Four_card_image_4 {
-    width: 343px;
+    width: 320px;
     height: 111px;
     background-size: cover;
     background-position: center;
@@ -536,9 +537,11 @@ body {
   
   .title_text_second_box_h2 {
     margin-bottom: 65px;
+    font-weight: 400;
+    font-size: 13px;
   }
 
-  .product {
+  /* .product {
     max-height: none;
   }
 
@@ -576,6 +579,54 @@ body {
   .brouse_button {
     grid-column: 1 / -1;
     margin-top: 40px;
+  } */
+
+  .product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product_box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0px 16px;
+  }
+
+  .Item_box_image_1 {
+
+    height: 580px;
+  }
+  
+  .Item_box_image_2 {
+
+    height: 580px;
+  } 
+  
+  .Item_box_image_3 {
+
+    height: 580px;
+  }
+  
+  .Item_box_image_4 {
+
+    height: 580px;
+  }
+  
+  .Item_box_image_5 {
+
+    height: 580px;
+  }
+  
+  .Item_box_image_6 {
+ 
+    height: 580px;
+  }
+
+  .brouse_button {
+    grid-column: 1 / -1;
+    margin-top: 40px;
   }
 }
-
